--- a/Explicacion HTML y CSS/styles/estilos.css
+++ b/Explicacion HTML y CSS/styles/estilos.css
@@ -16,8 +16,19 @@ a {
 
 .parrafoazul{
     color: blue;
+    width: 350px;
 }
 
 .frase{
     color: slateblue;
+    color: tomato;
+
+}
+
+.frase{
+    color: green;
+}
+
+.contenedorConMargen{
+    margin: ;
 }
