cuadro de busqueda

--- a/Explicacion HTML y CSS/paginaPerritos/styles/estilos.css
+++ b/Explicacion HTML y CSS/paginaPerritos/styles/estilos.css
@@ -49,3 +49,19 @@ ul{
     box-shadow: 1px 1px blue ;
 }
 
+.buscar{
+    background-color: white;
+    border: 1px solid gray;
+    padding: 4px;
+    border-radius: 8px;
+}
+
+.buscar:focus-within{
+    border: 1px solid blue;
+}
+
+.buscar > input {
+    outline: none;
+    border: 0px;
+
+}
