--- a/Explicacion HTML y CSS/paginaPerritos/styles/estilos.css
+++ b/Explicacion HTML y CSS/paginaPerritos/styles/estilos.css
@@ -12,6 +12,14 @@ ul{
    display: flex; 
    justify-content: space-between;
    padding: 10px;
+   background-color: #cccccc;
+   border-bottom: 1px solid gray;
+   box-shadow: 1px 1px gray;
+}
+
+.navbar > li{
+    display: flex;
+    align-items: center;
 }
 
 .logo{
@@ -19,7 +27,7 @@ ul{
 }
 
 .button{
-   border: 0px;
+    border: 0px;
     padding: 5px 10px;
     border-radius: 10px;
     font-weight: bolder; 
@@ -27,7 +35,6 @@ ul{
 
 .button:hover{
     cursor: pointer;
-    box-shadow: 2px 2px pink;
     transform: scale(1.1);
 }
 
@@ -54,6 +61,9 @@ ul{
     border: 1px solid gray;
     padding: 4px;
     border-radius: 8px;
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .buscar:focus-within{
@@ -64,4 +74,8 @@ ul{
     outline: none;
     border: 0px;
 
+}
+
+.iconoBusqueda:hover {
+color: blue;
 }
